# coreason-chronos

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  VIGNETTE.md  debug_dateparser.py  debug_pydantic.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  product_requirements.md
src/coreason_chronos/: __init__.py  agent.py  causality.py  forecaster.py  main.py  models.py  schemas.py  server.py  timeline_extractor.py  timeline_extractor.py.bak  validator.py  visualizer.py
src/coreason_chronos/utils/: __init__.py  algebra.py  logger.py
tests/: conftest.py  test_agent.py  test_agent_edge_cases.py  test_algebra.py  test_causality.py  test_causality_engine.py  test_complex_smoke.py  test_forecaster.py  test_forecaster_edge.py  test_main.py  test_main_edge_cases.py  test_models.py  test_schemas.py  test_server.py  test_timeline_extractor.py  test_timeline_extractor_anchor.py  test_timeline_extractor_complex.py  test_timeline_extractor_complex_fuzzy.py  test_timeline_extractor_duration.py  test_timeline_extractor_edge_cases.py  test_timeline_extractor_fuzzy.py  test_utils.py  test_validator.py  test_visualizer.py  test_workflow_complex.py
