[tool.poetry]
name = "coreason_chronos"
version = "0.3.0"
description = "coreason-chronos"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_chronos", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
pydantic = "^2.12.5"
dateparser = "^1.2.2"
transformers = "^4.57.3"
torch = "^2.10.0"
chronos-forecasting = "^2.2.2"
matplotlib = "^3.10.8"
rapidfuzz = "^3.14.3"
click = "^8.3.1"
anyio = "^4.12.1"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
coreason-identity = "^0.4.2"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
types-dateparser = "^1.2.2.20250809"
mypy = "^1.19.1"
types-python-dateutil = "^2.9.0.20260124"
types-aiofiles = "^25.1.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_chronos"
version = "0.2.1"
description = "coreason-chronos"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_chronos"
Repository = "https://github.com/CoReason-AI/coreason_chronos"
Documentation = "https://github.com/CoReason-AI/coreason_chronos"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests as live (deselect with '-m \"not live\"')",
    "asyncio: mark a test as an asyncio test",
]

[tool.coverage.run]
omit = ["tests/*"]
